# quick

./: .gitignore  CMakeLists.txt  build.lua
source/: CMakeLists.txt  cocos2d_files.txt
source/Core/: CCConfiguration.cpp  CCDirector.cpp  CCDirector.h  CCScheduler.cpp  CCScheduler.h  cocos2d.cpp
source/Core/actions/: CCActionInstant.cpp
source/Core/base_nodes/: CCNode.cpp  CCNode.h
source/Core/cocoa/: CCArray.cpp  CCDictionary.cpp  CCObject.cpp  CCScriptEventDispatcher.cpp  CCString.cpp
source/Core/include/: cocos2d.h
source/Core/label_nodes/: CCLabelAtlas.cpp  CCLabelBMFont.cpp  CCLabelBMFont.h  CCLabelTTF.cpp
source/Core/layers_scenes_transitions_nodes/: CCLayer.cpp  CCScene.cpp
source/Core/menu_nodes/: CCMenuItem.cpp
source/Core/misc_nodes/: CCClippingRegionNode.cpp  CCRenderTexture.cpp  CCRenderTexture.h
source/Core/platform/: CCAccelerometer.cpp  CCApplication.cpp  CCApplication.h  CCCommon.cpp  CCDevice.cpp  CCEGLView.cpp  CCFileUtils.cpp  CCImage.cpp  CCImage.h  CCInput.cpp  CCInput.h  CCSAXParser.cpp  CCStdC.cpp  CCTimer.h
source/Core/resources/: CCDecoderXXTea.cpp  CCDecoderXXTea.h  CCFileUtils.cpp  CCFileUtils.h  CCImage.cpp  CCImage.h  CCSAXParser.cpp  CCZipFile.cpp
source/Core/shaders/: CCGLProgram.cpp
source/Core/sprite_nodes/: CCAnimationCache.cpp  CCSprite.cpp  CCSpriteFrameCache.cpp
source/Core/support/: CCNotificationCenter.cpp
source/Core/support/user_default/: CCUserDefault.cpp
source/Core/support/zip_support/: ZipUtils.cpp
source/Core/textures/: CCTexture2D.cpp  CCTexture2D.h  CCTextureCache.cpp  CCTextureETC.cpp  CCTexturePVR.cpp
source/Core/touch_dispatcher/: CCTouchTargetNode.cpp
source/Modules/Audio/win32/: SimpleAudioEngine.cpp
source/Modules/EditBox/: CCControl.cpp  CCControl.h  CCControlButton.cpp  CCControlButton.h  CCEditBox.cpp  CCEditBox.h  CCEditBoxImplWin.cpp
source/Modules/Particle/: CCParticleBatchNode.cpp  CCParticleExamples.cpp  CCParticleSystem.cpp
source/Modules/ScrollView/: CCScrollView.cpp  CCSorting.h  CCTableView.cpp
source/Modules/TileMap/: CCTMXXMLParser.cpp  CCTMXXMLParser.h
source/Modules/UI/: CocosGUI.h  CompatibleClasses.h  GUIDefine.h  UIButton.cpp  UIButton.h  UICheckBox.h  UIImageView.h  UILabelAtlas.h  UILabelBMFont.h  UILayout.cpp  UILayout.h  UILayoutDefine.h  UIListView.cpp  UILoadingBar.h  UIPageView.h  UIScrollInterface.h  UIScrollView.h  UISlider.h  UITextField.h  UITouchGroup.h  UIWidget.cpp  UIWidget.h
source/cocos2d-x/Audio/win32/: SimpleAudioEngine.cpp
source/cocos2d-x/cocos2dx/: CCConfiguration.cpp  CCDirector.cpp  CCDirector.h
source/cocos2d-x/cocos2dx/draw_nodes/: CCShapeNode.h
source/cocos2d-x/cocos2dx/include/: cocos2d.h
source/cocos2d-x/cocos2dx/label_nodes/: CCLabelBMFont.h
source/cocos2d-x/cocos2dx/menu_nodes/: CCMenu.cpp
source/cocos2d-x/cocos2dx/misc_nodes/: CCRenderTexture.cpp
source/cocos2d-x/cocos2dx/platform/: CCApplication.cpp  CCCommon.cpp  CCEGLView.h  CCFileUtils.h  CCGL.h  CCImage.cpp  CCStdC.h  CCTimer.cpp
source/cocos2d-x/cocos2dx/script_support/: CCScriptSupport.h
source/cocos2d-x/cocos2dx/text_input_node/: CCTextFieldTTF.cpp
source/cocos2d-x/cocos2dx/textures/: CCTexture2D.cpp  CCTextureCache.cpp
source/cocos2d-x/gui/CCControlExtension/: CCControlPotentiometer.cpp  CCControlSwitch.cpp  CCControlUtils.h  CCInvocation.h  (+1 more)
source/cocos2d-x/ui/: UITouchGroup.cpp
source/cocos2dx_lua/: CCLuaEngine.cpp  CCLuaEngine.h  CCLuaStack.cpp  CMakeLists.txt  LuaCocoStudio.cpp  LuaCocos2d.cpp  LuaCocos2d.h  LuaCocos2dCore.cpp  LuaCocos2dMudules.cpp  lua_cocos2dx_cocostudio_manual.cpp  lua_cocos2dx_cocostudio_manual.h  lua_cocos2dx_extensions_manual.cpp
source/cocos2dx_lua/tolua/: basic.lua  build.bat  build.sh
source/framework/: cocos2dx.lua  init.lua
source/framework/cc/: init.lua
source/luabinding/: Cocos2d.tolua  basic.lua  basic_ccs.lua  build.bat
source/luabinding/Core/: Cocos2d.tolua  main.tolua
source/luabinding/Modules/: main.tolua
source/lualib/: CMakeLists.txt  lua_extensions.c
source/lualib/cjson/: CMakeLists.txt
source/lualib/debugger/: CMakeLists.txt
source/lualib/filesystem/: CMakeLists.txt
source/lualib/lpack/: CMakeLists.txt
source/lualib/lsqlite3/: CMakeLists.txt
source/lualib/socket/: CMakeLists.txt
source/lualib/zlib/: CMakeLists.txt
source/player/: CMakeLists.txt
source/player/sources/: AppDelegate.cpp  AppDelegate.h
(+20 files in other folders)
